Revert sass gem to older version

--- a/assets/scss/base/_base.scss
+++ b/assets/scss/base/_base.scss
@@ -3,9 +3,9 @@
 // Copyright 2013-2015 thoughtbot, inc.
 // MIT License
 
-@use "reset";
-@use "buttons";
-@use "forms";
-@use "lists";
-@use "tables";
-@use "typography";
+@import "reset";
+@import "buttons";
+@import "forms";
+@import "lists";
+@import "tables";
+@import "typography";
