--- a/assets/scss/base/_buttons.scss
+++ b/assets/scss/base/_buttons.scss
@@ -1,32 +1,29 @@
-@use "../bourbon/functions/shade";
-@use "../variables";
-
 // #{$all-buttons} {
 
 .button {
   appearance: none;
-  background-color: variables.$action-color;
+  background-color: $action-color;
   border: 0;
-  border-radius: variables.$base-border-radius;
-  color: variables.$white-color;
+  border-radius: $base-border-radius;
+  color: $white-color;
   cursor: pointer;
   display: inline-block;
-  font-family: variables.$base-font-family;
-  font-size: variables.$base-font-size;
+  font-family: $base-font-family;
+  font-size: $base-font-size;
   -webkit-font-smoothing: antialiased;
   font-weight: 600;
   line-height: 1;
-  padding: variables.$small-spacing variables.$base-spacing;
+  padding: $small-spacing $base-spacing;
   text-decoration: none;
-  transition: background-color variables.$base-duration variables.$base-timing;
+  transition: background-color $base-duration $base-timing;
   user-select: none;
   vertical-align: middle;
   white-space: nowrap;
 
   &:hover,
   &:focus {
-    background-color: shade.shade(variables.$action-color, 20%);
-    color: variables.$white-color;
+    background-color: shade($action-color, 20%);
+    color: $white-color;
   }
 
   &:disabled {
@@ -34,7 +31,7 @@
     opacity: 0.5;
 
     &:hover {
-      background-color: variables.$action-color;
+      background-color: $action-color;
     }
   }
 }
