--- a/assets/scss/bourbon/addons/_margin.scss
+++ b/assets/scss/bourbon/addons/_margin.scss
@@ -1,5 +1,3 @@
-@use "../helpers/directional-values";
-
 @charset "UTF-8";
 
 /// Provides a quick method for targeting `margin` on specific sides of a box. Use a `null` value to “skip” a side.
@@ -24,5 +22,5 @@
 /// @output `margin`
 
 @mixin margin($vals...) {
-  @include directional-values.directional-property(margin, false, $vals...);
+  @include directional-property(margin, false, $vals...);
 }
