--- a/assets/scss/bourbon/css3/_backface-visibility.scss
+++ b/assets/scss/bourbon/css3/_backface-visibility.scss
@@ -1,5 +1,3 @@
-@use "../addons/prefixer";
-
 @mixin backface-visibility($visibility) {
-  @include prefixer.prefixer(backface-visibility, $visibility, webkit spec);
+  @include prefixer(backface-visibility, $visibility, webkit spec);
 }
