--- a/assets/scss/bourbon/css3/_user-select.scss
+++ b/assets/scss/bourbon/css3/_user-select.scss
@@ -1,5 +1,3 @@
-@use "../addons/prefixer";
-
 @mixin user-select($value: none) {
-  @include prefixer.prefixer(user-select, $value, webkit moz ms spec);
+  @include prefixer(user-select, $value, webkit moz ms spec);
 }
