--- a/assets/scss/bourbon/functions/_assign-inputs.scss
+++ b/assets/scss/bourbon/functions/_assign-inputs.scss
@@ -1,12 +1,10 @@
-@use "sass:list";
-@use "sass:string";
 @function assign-inputs($inputs, $pseudo: null) {
   $list: ();
 
   @each $input in $inputs {
-    $input: string.unquote($input);
+    $input: unquote($input);
     $input: if($pseudo, $input + ":" + $pseudo, $input);
-    $list: list.append($list, $input, comma);
+    $list: append($list, $input, comma);
   }
 
   @return $list;
