--- a/assets/scss/bourbon/helpers/_linear-gradient-parser.scss
+++ b/assets/scss/bourbon/helpers/_linear-gradient-parser.scss
@@ -1,29 +1,23 @@
-@use "sass:string";
-@use "../functions/is-number";
-@use "linear-angle-parser";
-@use "linear-positions-parser";
-@use "linear-side-corner-parser";
-
-@function linear-gradient-parser($image) {
-  $image: string.unquote($image);
+@function _linear-gradient-parser($image) {
+  $image: unquote($image);
   $gradients: ();
-  $start: string.index($image, "(");
-  $end: string.index($image, ",");
-  $first-val: string.slice($image, $start + 1, $end - 1);
+  $start: str-index($image, "(");
+  $end: str-index($image, ",");
+  $first-val: str-slice($image, $start + 1, $end - 1);
 
-  $prefix: string.slice($image, 1, $start);
-  $suffix: string.slice($image, $end, string.length($image));
+  $prefix: str-slice($image, 1, $start);
+  $suffix: str-slice($image, $end, str-length($image));
 
-  $has-multiple-vals: string.index($first-val, " ");
-  $has-single-position: string.unquote(linear-positions-parser.position-flipper($first-val) + "");
-  $has-angle: is-number.is-number(string.slice($first-val, 1, 1));
+  $has-multiple-vals: str-index($first-val, " ");
+  $has-single-position: unquote(_position-flipper($first-val) + "");
+  $has-angle: is-number(str-slice($first-val, 1, 1));
 
   @if $has-multiple-vals {
-    $gradients: linear-side-corner-parser.linear-side-corner-parser($image, $first-val, $prefix, $suffix, $has-multiple-vals);
+    $gradients: _linear-side-corner-parser($image, $first-val, $prefix, $suffix, $has-multiple-vals);
   }
 
   @else if $has-single-position != "" {
-    $pos: string.unquote($has-single-position + "");
+    $pos: unquote($has-single-position + "");
 
     $gradients: (
       webkit-image: -webkit- + $image,
@@ -33,7 +27,7 @@
 
   @else if $has-angle {
     // Rotate degree for webkit
-    $gradients: linear-angle-parser.linear-angle-parser($image, $first-val, $prefix, $suffix);
+    $gradients: _linear-angle-parser($image, $first-val, $prefix, $suffix);
   }
 
   @else {
