--- a/assets/scss/bourbon/addons/_border-width.scss
+++ b/assets/scss/bourbon/addons/_border-width.scss
@@ -1,5 +1,3 @@
-@use "../helpers/directional-values";
-
 @charset "UTF-8";
 
 /// Provides a quick method for targeting `border-width` on specific sides of a box. Use a `null` value to “skip” a side.
@@ -23,5 +21,5 @@
 /// @output `border-width`
 
 @mixin border-width($vals...) {
-  @include directional-values.directional-property(border, width, $vals...);
+  @include directional-property(border, width, $vals...);
 }
