--- a/assets/scss/bourbon/addons/_padding.scss
+++ b/assets/scss/bourbon/addons/_padding.scss
@@ -1,5 +1,3 @@
-@use "../helpers/directional-values";
-
 @charset "UTF-8";
 
 /// Provides a quick method for targeting `padding` on specific sides of a box. Use a `null` value to “skip” a side.
@@ -24,5 +22,5 @@
 /// @output `padding`
 
 @mixin padding($vals...) {
-  @include directional-values.directional-property(padding, false, $vals...);
+  @include directional-property(padding, false, $vals...);
 }
