--- a/assets/scss/bourbon/css3/_font-face.scss
+++ b/assets/scss/bourbon/css3/_font-face.scss
@@ -1,5 +1,3 @@
-@use "../helpers/font-source-declaration";
-
 @mixin font-face(
   $font-family,
   $file-path,
@@ -8,14 +6,14 @@
   $asset-pipeline: $asset-pipeline,
   $file-formats: eot woff2 woff ttf svg) {
 
-  $font-url-prefix: font-source-declaration.font-url-prefixer($asset-pipeline);
+  $font-url-prefix: font-url-prefixer($asset-pipeline);
 
   @font-face {
     font-family: $font-family;
     font-style: $style;
     font-weight: $weight;
 
-    src: font-source-declaration.font-source-declaration(
+    src: font-source-declaration(
       $font-family,
       $file-path,
       $asset-pipeline,
