--- a/assets/scss/bourbon/css3/_perspective.scss
+++ b/assets/scss/bourbon/css3/_perspective.scss
@@ -1,10 +1,8 @@
-@use "../addons/prefixer";
-
 @mixin perspective($depth: none) {
   // none | <length>
-  @include prefixer.prefixer(perspective, $depth, webkit moz spec);
+  @include prefixer(perspective, $depth, webkit moz spec);
 }
 
 @mixin perspective-origin($value: 50% 50%) {
-  @include prefixer.prefixer(perspective-origin, $value, webkit moz spec);
+  @include prefixer(perspective-origin, $value, webkit moz spec);
 }
