--- a/assets/scss/bourbon/functions/_contains.scss
+++ b/assets/scss/bourbon/functions/_contains.scss
@@ -1,5 +1,3 @@
-@use "sass:list";
-@use "sass:meta";
 @charset "UTF-8";
 
 /// Checks if a list contains a value(s).
@@ -19,7 +17,7 @@
 
 @function contains($list, $values...) {
   @each $value in $values {
-    @if meta.type-of(list.index($list, $value)) != "number" {
+    @if type-of(index($list, $value)) != "number" {
       @return false;
     }
   }
