--- a/assets/scss/bourbon/functions/_is-light.scss
+++ b/assets/scss/bourbon/functions/_is-light.scss
@@ -1,6 +1,3 @@
-@use "sass:math";
-
-@use "sass:color";
 @charset "UTF-8";
 
 /// Programatically determines whether a color is light or dark.
@@ -15,10 +12,10 @@
 /// @return {Bool}
 
 @function is-light($hex-color) {
-  $-local-red: color.red(rgba($hex-color, 1));
-  $-local-green: color.green(rgba($hex-color, 1));
-  $-local-blue: color.blue(rgba($hex-color, 1));
-  $-local-lightness: math.div($-local-red * 0.2126 + $-local-green * 0.7152 + $-local-blue * 0.0722, 255);
+  $-local-red: red(rgba($hex-color, 1));
+  $-local-green: green(rgba($hex-color, 1));
+  $-local-blue: blue(rgba($hex-color, 1));
+  $-local-lightness: ($-local-red * 0.2126 + $-local-green * 0.7152 + $-local-blue * 0.0722) / 255;
 
   @return $-local-lightness > 0.6;
 }
