--- a/assets/scss/bourbon/functions/_is-number.scss
+++ b/assets/scss/bourbon/functions/_is-number.scss
@@ -1,5 +1,3 @@
-@use "contains";
-
 @charset "UTF-8";
 
 /// Checks for a valid number.
@@ -9,5 +7,5 @@
 /// @require {function} contains
 
 @function is-number($value) {
-  @return contains.contains("0" "1" "2" "3" "4" "5" "6" "7" "8" "9" 0 1 2 3 4 5 6 7 8 9, $value);
+  @return contains("0" "1" "2" "3" "4" "5" "6" "7" "8" "9" 0 1 2 3 4 5 6 7 8 9, $value);
 }
