--- a/assets/scss/bourbon/functions/_px-to-rem.scss
+++ b/assets/scss/bourbon/functions/_px-to-rem.scss
@@ -1,19 +1,15 @@
-@use "sass:math";
-@use "../settings/px-to-em";
-@use "strip-units";
-
 // Convert pixels to rems
 // eg. for a relational value of 12px write rem(12)
 // Assumes $em-base is the font-size of <html>
 
 @function rem($pxval) {
-  @if not math.is-unitless($pxval) {
-    $pxval: strip-units.strip-units($pxval);
+  @if not unitless($pxval) {
+    $pxval: strip-units($pxval);
   }
 
-  $base: px-to-em.$em-base;
-  @if not math.is-unitless($base) {
-    $base: strip-units.strip-units($base);
+  $base: $em-base;
+  @if not unitless($base) {
+    $base: strip-units($base);
   }
-  @return math.div($pxval, $base) * 1rem;
+  @return ($pxval / $base) * 1rem;
 }
