--- a/assets/scss/bourbon/functions/_tint.scss
+++ b/assets/scss/bourbon/functions/_tint.scss
@@ -1,4 +1,3 @@
-@use "sass:color";
 @charset "UTF-8";
 
 /// Mixes a color with white.
@@ -21,5 +20,5 @@
 /// @return {Color}
 
 @function tint($color, $percent) {
-  @return color.mix(#fff, $color, $percent);
+  @return mix(#fff, $color, $percent);
 }
