--- a/assets/scss/bourbon/helpers/_directional-values.scss
+++ b/assets/scss/bourbon/helpers/_directional-values.scss
@@ -1,6 +1,3 @@
-@use "sass:list";
-@use "../functions/contains-falsy";
-
 @charset "UTF-8";
 
 /// Directional-property mixins are shorthands for writing properties like the following
@@ -32,10 +29,10 @@
 @function collapse-directionals($vals) {
   $output: null;
 
-  $a: list.nth($vals, 1);
-  $b: if(list.length($vals) < 2, $a, list.nth($vals, 2));
-  $c: if(list.length($vals) < 3, $a, list.nth($vals, 3));
-  $d: if(list.length($vals) < 2, $a, list.nth($vals, if(list.length($vals) < 4, 2, 4)));
+  $a: nth($vals, 1);
+  $b: if(length($vals) < 2, $a, nth($vals, 2));
+  $c: if(length($vals) < 3, $a, nth($vals, 3));
+  $d: if(length($vals) < 2, $a, nth($vals, if(length($vals) < 4, 2, 4)));
 
   @if $a == 0 { $a: 0; }
   @if $b == 0 { $b: 0; }
@@ -74,24 +71,24 @@
 
   $vals: collapse-directionals($vals);
 
-  @if contains-falsy.contains-falsy($vals) {
-    @if list.nth($vals, 1) { #{$top}: list.nth($vals, 1); }
+  @if contains-falsy($vals) {
+    @if nth($vals, 1) { #{$top}: nth($vals, 1); }
 
-    @if list.length($vals) == 1 {
-      @if list.nth($vals, 1) { #{$right}: list.nth($vals, 1); }
+    @if length($vals) == 1 {
+      @if nth($vals, 1) { #{$right}: nth($vals, 1); }
     } @else {
-      @if list.nth($vals, 2) { #{$right}: list.nth($vals, 2); }
+      @if nth($vals, 2) { #{$right}: nth($vals, 2); }
     }
 
-    @if list.length($vals) == 2 {
-      @if list.nth($vals, 1) { #{$bottom}: list.nth($vals, 1); }
-      @if list.nth($vals, 2) { #{$left}:   list.nth($vals, 2); }
-    } @else if list.length($vals) == 3 {
-      @if list.nth($vals, 3) { #{$bottom}: list.nth($vals, 3); }
-      @if list.nth($vals, 2) { #{$left}:   list.nth($vals, 2); }
-    } @else if list.length($vals) == 4 {
-      @if list.nth($vals, 3) { #{$bottom}: list.nth($vals, 3); }
-      @if list.nth($vals, 4) { #{$left}:   list.nth($vals, 4); }
+    @if length($vals) == 2 {
+      @if nth($vals, 1) { #{$bottom}: nth($vals, 1); }
+      @if nth($vals, 2) { #{$left}:   nth($vals, 2); }
+    } @else if length($vals) == 3 {
+      @if nth($vals, 3) { #{$bottom}: nth($vals, 3); }
+      @if nth($vals, 2) { #{$left}:   nth($vals, 2); }
+    } @else if length($vals) == 4 {
+      @if nth($vals, 3) { #{$bottom}: nth($vals, 3); }
+      @if nth($vals, 4) { #{$left}:   nth($vals, 4); }
     }
   } @else {
     #{$all}: $vals;
