--- a/assets/scss/bourbon/helpers/_font-source-declaration.scss
+++ b/assets/scss/bourbon/helpers/_font-source-declaration.scss
@@ -1,6 +1,3 @@
-@use "sass:list";
-@use "../functions/contains";
-
 // Used for creating the source string for fonts using @font-face
 // Reference: http://goo.gl/Ru1bKP
 
@@ -30,14 +27,14 @@
   );
 
   @each $key, $values in $formats-map {
-    @if contains.contains($file-formats, $key) {
-      $file-path: list.nth($values, 1);
-      $font-format: list.nth($values, 2);
+    @if contains($file-formats, $key) {
+      $file-path: nth($values, 1);
+      $font-format: nth($values, 2);
 
       @if $asset-pipeline == true {
-        $src: list.append($src, font-url($file-path) $font-format, comma);
+        $src: append($src, font-url($file-path) $font-format, comma);
       } @else {
-        $src: list.append($src, url($file-path) $font-format, comma);
+        $src: append($src, url($file-path) $font-format, comma);
       }
     }
   }
