--- a/assets/scss/bourbon/helpers/_radial-arg-parser.scss
+++ b/assets/scss/bourbon/helpers/_radial-arg-parser.scss
@@ -1,27 +1,25 @@
-@use "sass:list";
-@use "sass:meta";
-@function radial-arg-parser($g1, $g2, $pos, $shape-size) {
+@function _radial-arg-parser($g1, $g2, $pos, $shape-size) {
   @each $value in $g1, $g2 {
-    $first-val: list.nth($value, 1);
-    $pos-type:  meta.type-of($first-val);
+    $first-val: nth($value, 1);
+    $pos-type:  type-of($first-val);
     $spec-at-index: null;
 
     // Determine if spec was passed to mixin
-    @if meta.type-of($value) == list {
-      $spec-at-index: if(list.index($value, at), list.index($value, at), false);
+    @if type-of($value) == list {
+      $spec-at-index: if(index($value, at), index($value, at), false);
     }
     @if $spec-at-index {
       @if $spec-at-index > 1 {
         @for $i from 1 through ($spec-at-index - 1) {
-          $shape-size: $shape-size list.nth($value, $i);
+          $shape-size: $shape-size nth($value, $i);
         }
-        @for $i from ($spec-at-index + 1) through list.length($value) {
-          $pos: $pos list.nth($value, $i);
+        @for $i from ($spec-at-index + 1) through length($value) {
+          $pos: $pos nth($value, $i);
         }
       }
       @else if $spec-at-index == 1 {
-        @for $i from ($spec-at-index + 1) through list.length($value) {
-          $pos: $pos list.nth($value, $i);
+        @for $i from ($spec-at-index + 1) through length($value) {
+          $pos: $pos nth($value, $i);
         }
       }
       $g1: null;
