--- a/assets/scss/bourbon/helpers/_radial-positions-parser.scss
+++ b/assets/scss/bourbon/helpers/_radial-positions-parser.scss
@@ -1,14 +1,10 @@
-@use "sass:list";
-@use "sass:string";
-@use "shape-size-stripper";
+@function _radial-positions-parser($gradient-pos) {
+  $shape-size: nth($gradient-pos, 1);
+  $pos:        nth($gradient-pos, 2);
+  $shape-size-spec: _shape-size-stripper($shape-size);
 
-@function radial-positions-parser($gradient-pos) {
-  $shape-size: list.nth($gradient-pos, 1);
-  $pos:        list.nth($gradient-pos, 2);
-  $shape-size-spec: shape-size-stripper.shape-size-stripper($shape-size);
-
-  $pre-spec: string.unquote(if($pos, "#{$pos}, ", null))
-             string.unquote(if($shape-size, "#{$shape-size},", null));
+  $pre-spec: unquote(if($pos, "#{$pos}, ", null))
+             unquote(if($shape-size, "#{$shape-size},", null));
   $pos-spec: if($pos, "at #{$pos}", null);
 
   $spec: "#{$shape-size-spec} #{$pos-spec}";
