--- a/assets/scss/bourbon/helpers/_render-gradients.scss
+++ b/assets/scss/bourbon/helpers/_render-gradients.scss
@@ -1,5 +1,3 @@
-@use "sass:list";
-@use "sass:string";
 // User for linear and radial gradients within background-image or border-image properties
 
 @function _render-gradients($gradient-positions, $gradients, $gradient-type, $vendor: false) {
@@ -8,13 +6,13 @@
   $vendor-gradients: null;
   @if $gradient-type == linear {
     @if $gradient-positions {
-      $pre-spec: list.nth($gradient-positions, 1);
-      $spec:     list.nth($gradient-positions, 2);
+      $pre-spec: nth($gradient-positions, 1);
+      $spec:     nth($gradient-positions, 2);
     }
   }
   @else if $gradient-type == radial {
-    $pre-spec: list.nth($gradient-positions, 1);
-    $spec:     list.nth($gradient-positions, 2);
+    $pre-spec: nth($gradient-positions, 1);
+    $spec:     nth($gradient-positions, 2);
   }
 
   @if $vendor {
@@ -22,7 +20,7 @@
   }
   @else if $vendor == false {
     $vendor-gradients: "#{$gradient-type}-gradient(#{$spec} #{$gradients})";
-    $vendor-gradients: string.unquote($vendor-gradients);
+    $vendor-gradients: unquote($vendor-gradients);
   }
   @return $vendor-gradients;
 }
