--- a/assets/scss/bourbon/helpers/_str-to-num.scss
+++ b/assets/scss/bourbon/helpers/_str-to-num.scss
@@ -1,14 +1,8 @@
-@use "sass:math";
-
-@use "sass:list";
-@use "sass:string";
-@use "convert-units";
-
 //************************************************************************//
 // Helper function for linear/radial-gradient-parsers.
 // Source: http://sassmeister.com/gist/9647408
 //************************************************************************//
-@function str-to-num($string) {
+@function _str-to-num($string) {
   // Matrices
   $strings: "0" "1" "2" "3" "4" "5" "6" "7" "8" "9";
   $numbers:  0   1   2   3   4   5   6   7   8   9;
@@ -19,9 +13,9 @@
   $minus: false;
 
   // Looping through all characters
-  @for $i from 1 through string.length($string) {
-    $character: string.slice($string, $i, $i);
-    $index: list.index($strings, $character);
+  @for $i from 1 through str-length($string) {
+    $character: str-slice($string, $i, $i);
+    $index: index($strings, $character);
 
     @if $character == "-" {
       $minus: true;
@@ -34,10 +28,10 @@
     @else {
       @if not $index {
         $result: if($minus, $result * -1, $result);
-        @return convert-units.convert-units($result, string.slice($string, $i));
+        @return _convert-units($result, str-slice($string, $i));
       }
 
-      $number: list.nth($numbers, $index);
+      $number: nth($numbers, $index);
 
       @if $divider == 0 {
         $result: $result * 10;
@@ -46,7 +40,7 @@
       @else {
         // Move the decimal dot to the left
         $divider: $divider * 10;
-        $number: math.div($number, $divider);
+        $number: $number / $divider;
       }
 
       $result: $result + $number;
