--- a/_includes/head.html
+++ b/_includes/head.html
@@ -110,7 +110,7 @@
   })();
   </script>
   <script type="text/javascript" async
-  src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_SVG">
+          src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=TeX-AMS_SVG">
   </script>
   <script type="text/x-mathjax-config">
   MathJax.Hub.Config({
